--- a/app/views/fleets/show.html.slim
+++ b/app/views/fleets/show.html.slim
@@ -1,1 +1,6 @@
-p eee
+.col.s4
+  .card.z-depth-0
+    .card-content
+      span.card-title
+        | "Shop"
+      = link_to "Go to shop", fleet_shops_path(:fleet_id)
