routing to shops

--- a/app/views/fleets/show.html.slim
+++ b/app/views/fleets/show.html.slim
@@ -3,4 +3,4 @@
     .card-content
       span.card-title
         | "Shop"
-      = link_to "Go to shop", fleet_shops_path(:fleet_id)
+      = link_to "Go to shop", fleet_shops_path(params[:id])
