--- a/app/views/shops/index.html.slim
+++ b/app/views/shops/index.html.slim
@@ -1,5 +1,5 @@
 .row
-  .col.s12.m6
+  .col.s12.m4
     .card.primary.z-depth-0
       .card-content.white-text
         span.card-title
@@ -9,7 +9,7 @@
       .card-action
         a.red-text[href="#"]
           | Buy store
-  .col.s12.m6
+  .col.s12.m4
     .card.primary.z-depth-0
       .card-content.white-text
         span.card-title
@@ -19,3 +19,33 @@
       .card-action
         a.red-text[href="#"]
           | Buy factory
+  .col.s12.m4
+    .card.primary.z-depth-0
+      .card-content.white-text
+        span.card-title
+          | Trailer hubs
+        p
+          | You must have hubs for have trucks, every hub allows a maximum of 3 trucks
+      .card-action
+        a.red-text[href="#"]
+          | Buy trailer hubs
+  .col.s12.m8
+    .card.ambiance-darker.z-depth-0
+      .card-content.white-text
+        span.card-title
+          | Trailers
+        p
+          | Must have 10 trailers for win
+      .card-action
+        a.red-text[href="#"]
+          | Buy trailers
+  .col.s12.m4
+    .card.teal.z-depth-0
+      .card-content.white-text
+        span.card-title
+          | Bulk
+        p
+          | This will finnish the test when able to do it
+      .card-action
+        a.red-text[href="#"]
+          | Create a bulk of 10 trailers for win
