--- a/app/views/fleets/show.html.slim
+++ b/app/views/fleets/show.html.slim
@@ -1,6 +1,13 @@
-.col.s4
-  .card.z-depth-0
-    .card-content
-      span.card-title
-        | "Shop"
-      = link_to "Go to shop", fleet_shops_path(params[:id])
+.row
+  .col.s4
+    .card.z-depth-0
+      .card-content
+        span.card-title
+          | Shop
+        = link_to "Go to shop", fleet_shops_path(params[:id])
+  .col.s4
+    .card.z-depth-0
+      .card-content
+        span.card-title
+          | Shop
+        = link_to "Go to shop", fleet_shops_path(params[:id])
