goods listings for fleets, initial resources

--- a/app/views/fleets/show.html.slim
+++ b/app/views/fleets/show.html.slim
@@ -1,13 +1,20 @@
 .row
-  .col.s4
+  .col.s12
     .card.z-depth-0
       .card-content
         span.card-title
           | Shop
         = link_to "Go to shop", fleet_shops_path(params[:id])
-  .col.s4
+  .col.s3
     .card.z-depth-0
       .card-content
-        span.card-title
-          | Shop
-        = link_to "Go to shop", fleet_shops_path(params[:id])
+        p.flow-text I am Flow Text
+  .col.s3
+    .card.z-depth-0
+      .card-content
+  .col.s3
+    .card.z-depth-0
+      .card-content
+  .col.s3
+    .card.z-depth-0
+      .card-content
