--- a/app/views/fleets/show.html.slim
+++ b/app/views/fleets/show.html.slim
@@ -1,5 +1,7 @@
 .row
   .col.s12
+    h2.flow-text
+      = @fleet.name + "`s fleet resources"
     .card.z-depth-0
       .card-content
         span.card-title
@@ -8,13 +10,22 @@
   .col.s3
     .card.z-depth-0
       .card-content
-        p.flow-text I am Flow Text
+        h3.flow-text Metal
+        p.flow-text
+          = @fleet.goods_listing.metal
   .col.s3
     .card.z-depth-0
       .card-content
+        h3.flow-text Fiber
+        p.flow-text
+          = @fleet.goods_listing.fiber
   .col.s3
     .card.z-depth-0
       .card-content
+        h3.flow-text Fuel
+        p.flow-text
+          = @fleet.goods_listing.fuel
   .col.s3
     .card.z-depth-0
       .card-content
+        p.flow-text Trucks
